objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Arriving_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Arriving To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Onboarding_From__c</field>
                <operation>notEqual</operation>
                <valueField>Airport__c.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Onboarding_From__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Bookings (Arriving To)</relationshipLabel>
        <relationshipName>Bookings1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baggage_Count__c</fullName>
        <label>Baggage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beverage__c</fullName>
        <label>Beverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Juice(Basis of Availability)</fullName>
                </value>
                <value>
                    <fullName>Beer</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_status__c</fullName>
        <label>Booking status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fare_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Fare type of this ticket saver/flexi plus</description>
        <label>Fare Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Flight_Name__c</field>
                <operation>equals</operation>
                <valueField>Fare__c.Flight__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Passenger_Type__c</field>
                <operation>equals</operation>
                <valueField>Fare__c.Passenger_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Fare__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flight</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Onboarding_From__c</field>
                <operation>equals</operation>
                <valueField>Flight__c.Onboarding_From__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Arriving_To__c</field>
                <operation>equals</operation>
                <valueField>Flight__c.Arriving_To__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food_Items__c</fullName>
        <label>Food Items</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Food_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poha</fullName>
                </value>
                <value>
                    <fullName>Upma</fullName>
                </value>
                <value>
                    <fullName>Veg Biryani</fullName>
                </value>
                <value>
                    <fullName>Veg Pulaw</fullName>
                </value>
                <value>
                    <fullName>Bread Omelette</fullName>
                </value>
                <value>
                    <fullName>Chicken Biryani</fullName>
                </value>
                <value>
                    <fullName>Sandwich</fullName>
                </value>
                <value>
                    <fullName>Chicken Roll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Type__c</fullName>
        <label>Food Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Veg</fullName>
                </value>
                <value>
                    <fullName>Non-Veg</fullName>
                </value>
                <value>
                    <fullName>FN-00003</fullName>
                    <isActive>false</isActive>
                    <label>FN-00003</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Proof__c</fullName>
        <label>Id Proof</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Onboarding From</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passenger_Email__c</fullName>
        <label>Passenger Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Passenger_Name__c</fullName>
        <label>Passenger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Type__c</fullName>
        <label>Passenger Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
                <value>
                    <fullName>Senior Citizen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Google Pay</fullName>
                </value>
                <value>
                    <fullName>Phone Pe</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fare__c</fullName>
        <formula>Fare_Type__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Passenger_Name__c</columns>
        <columns>Passenger_Email__c</columns>
        <columns>Onboarding_From__c</columns>
        <columns>Arriving_To__c</columns>
        <columns>Flight_Name__c</columns>
        <columns>Booking_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BK-{00000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Restricting_for_editing_after_cancelled</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Booking_status__c , &apos;Cancelled&apos;)  &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
        <errorMessage>Cancelled ticket is not allow to edit !!!!!!!!!</errorMessage>
    </validationRules>
</CustomObject>